Adds nodes stats API
Signed-off-by: Fanit Kolchina <kolchfa@amazon.com>